--- a/homework_02/css/style.css
+++ b/homework_02/css/style.css
@@ -57,7 +57,6 @@ write your code here
         section:nth-child(n+3) {
             display: none;
         }
-        footer > .tm-footer {}
     }
 
 /*    ---Task2---    */
@@ -68,3 +67,22 @@ li.box{
 }
 
 /*    ---Task3---    */
+p::first-letter {
+    color: #76cdd7;
+    font-size: 30px;
+}
+
+/*    ---Task4---    */
+.tm-content-box
+{
+    -webkit-box-shadow: 0px 0px 8px 3px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 0px 8px 3px rgba(0,0,0,0.25);
+    box-shadow: 0px 0px 8px 3px rgba(0,0,0,0.25);
+}
+.tm-sidebar {
+    -webkit-box-shadow: 0px 0px 8px 3px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 0px 8px 3px rgba(0,0,0,0.25);
+    box-shadow: 0px 0px 8px 3px rgba(0,0,0,0.25);
+}
+
+/*    ---Task5---    */
