--- a/homework_02/css/style.css
+++ b/homework_02/css/style.css
@@ -128,5 +128,21 @@ write your code here
         section.heading.tm-content-box.pad ol li a:hover {
             color: #a9e0e6;
         }
+        
         /*    ---Task10---    */
+        section.blocks ul.boxes.gallery-container li.box:nth-child(odd) {
+            background-color: #f2f2f2;
+        }
+        ul.boxes.gallery-container li.box p::first-letter {
+            color: #413e37;
+        }
+        
+        /*    ---Task11---    */
+        li.tm-nav-item:nth-child(-n+3) {
+            border-bottom: 1px solid silver;
+        }
+        .tm-main-nav {
+            padding-top: 0px;
+            padding-bottom: 0px;
+        }
     }
