--- a/homework_02/css/style.css
+++ b/homework_02/css/style.css
@@ -13,7 +13,7 @@ write your code here
 
 */
 
-/*    ---Task1---    */
+    /*    ---Task1---    */
     @page {
         size: A4;
     }
@@ -75,12 +75,12 @@ write your code here
         }
 
         /*    ---Task4---    */
-        .tm-content-box {
+        .tm-sidebar {
             -webkit-box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
             -moz-box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
             box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
         }
-        .tm-main-nav {
+        section {
             -webkit-box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
             -moz-box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
             box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
@@ -91,7 +91,7 @@ write your code here
             border: 2px solid silver;
         }
 
-        /*    ---Task6---   до всіх тайлів */
+        /*    ---Task6---    */
         .carousel-item:first-child h2 {
             color: gainsboro;
             letter-spacing: 5px;
@@ -153,18 +153,16 @@ write your code here
         button[type="submit"] {
             color: red;
         }
-
-        /*    ---Task13---    */
     }
-
+    /*    ---Task13---    */
     @media screen and (max-width: 1140px), (max-height: 835px) {
         .tm-sidebar {
-            z-index: 5;
-            height: auto;
+            z-index: 16;
             width: auto;
         }
         .tm-nav-item {
             width: auto;
+            height: auto;
         }
         nav {
             position: fixed;
@@ -175,32 +173,30 @@ write your code here
             display: inline;
             vertical-align: middle;
         }
-        nav ul {
+        .tm-main-nav {
             margin: 0;
-            overflow: hidden;
+            -webkit-box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
+            -moz-box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 0px 8px 3px rgba(0, 0, 0, 0.25);
+            border: 1px solid silver;
         }
-        nav ul li {
-            vertical-align: middle;
+        li.tm-nav-item {         
             display: inline-block;
-            margin-right: 5%;
-            margin-left: 5%; 
-        }
-        .tm-main-content {
-            margin-top: 70px;
-        }
-        nav ul li.tm-nav-item:nth-child(-n+4) {
-            overflow: hidden;
-            border-bottom: 0px;
-        }
-        nav ul li.tm-nav-item {
+            margin-right: 6%;
+            margin-left: 6%; 
             padding: 0px 30px;
         }
         .tm-main-content {
+            display: block;
             position: absolute;
-            top: 35%;
+            padding: 0;
+            top: 230px;
+            margin: -125px -125px 0 -125px;
             left: 30%;
             right: 30%;
-            padding-left: 0;
-            margin: -125px -125px 0 -125px;
+        }
+        li.tm-nav-item:nth-child(-n+3)
+        {
+            border-width: 0px;
         }
     }
