--- a/homework_03/css/style1.css
+++ b/homework_03/css/style1.css
@@ -1,115 +1,67 @@
 html {
-  height: auto;
-  width: auto;
-  max-height: 100%;
   background-color: #DCBB9A;
   font-family: "Times New Roman", Times, serif; }
   html body {
-    height: auto;
+    margin: 10px 15% 10px 15%;
+    padding: 10px 30px 20px 20px;
     width: auto;
-    color: #000000;
+    height: auto;
+    color: black;
     max-width: 1100px;
-    background-color: #ffffff;
-    margin-left: 15%;
-    margin-right: 15%;
-    padding-left: 20px;
-    padding-right: 30px;
-    padding-bottom: 20px;
-    padding-top: 10px; }
-    html body form {
-      max-width: 1100px; }
+    background-color: #ffffff; }
     html body div.column {
       column-count: 2; }
-    html body input.cell_width {
-      color: #808080;
-      border-color: #D3D3D3;
-      width: 100%;
-      height: 30px;
-      padding-left: 5px;
-      box-sizing: border-box;
-      box-shadow: none;
-      border-style: solid;
-      border-width: 1px;
-      margin-bottom: 15px;
-      margin-top: 5px; }
-    html body textarea {
-      color: #808080;
-      border-color: #D3D3D3;
-      width: 100%;
-      height: 200px;
-      padding-left: 5px;
-      box-sizing: border-box;
-      vertical-align: top;
-      resize: vertical;
-      overflow: auto;
-      margin-bottom: 20px;
-      margin-top: 5px; }
-    html body #button {
-      position: relative;
-      cursor: pointer;
-      width: 255px;
-      height: 45px;
-      background-color: transparent;
-      color: #5488B5;
-      font-weight: normal;
-      border: 1px #5488B5 solid;
-      font-size: 125%;
-      margin-bottom: 15px;
-      top: 0px;
-      transition: all ease 0.3s; }
-      html body #button:active {
-        box-shadow: 0 3px 0 transparent;
-        top: 3px; }
-    html body span {
-      color: #808080; }
     html body div#content {
-      max-width: 100%;
       width: 100%;
+      height: auto;
       box-sizing: content-box;
-      overflow-y: auto; }
+      overflow-y: hidden; }
       html body div#content h1 {
-        text-align: center;
         color: #893C00;
+        text-align: center;
         text-transform: none; }
       html body div#content h2 {
         color: #893C00; }
       html body div#content img {
-        border: 2px solid #893C00;
-        padding: 2px;
-        max-width: 100%;
-        height: auto;
-        display: block; }
-        html body div#content img.img-left {
-          float: left;
-          margin: 0 15px 15px 0;
-          max-width: 100%; }
-        html body div#content img.img-right {
-          float: right;
-          margin: 0 0 5px 10px; }
-      html body div#content div.brief {
-        color: #000000;
-        float: left;
-        background-color: #FADCBA;
-        padding: 15px;
-        width: 40%;
+        padding: 2px 2px 2px 2px;
+        width: auto;
         height: auto;
         display: block;
-        margin: 0 20px 5px 0; }
+        border: 2px solid #893C00; }
+        html body div#content img.img-left {
+          margin: 0 15px 15px 0;
+          float: left; }
+        html body div#content img.img-right {
+          margin: 0 0 5px 10px;
+          float: right; }
+      html body div#content div.brief {
+        margin: 0 20px 5px 0;
+        padding: 15px 15px 15px 15px;
+        width: 40%;
+        height: auto;
+        color: black;
+        float: left;
+        background-color: #FADCBA;
+        display: block; }
       html body div#content a {
         color: #5488B5; }
+        html body div#content a:hover {
+          color: gray; }
+        html body div#content a:visited {
+          color: orange; }
       html body div#content table {
-        border-collapse: collapse;
+        margin: 0 0 50px 0;
         width: 97%;
-        max-width: 1100px;
-        margin-bottom: 50px; }
+        height: auto;
+        border-collapse: collapse; }
         html body div#content table caption {
-          text-align: right;
-          color: #000000; }
+          color: black;
+          text-align: right; }
         html body div#content table tbody tr:first-child {
           background-color: #E0E0E0; }
           html body div#content table tbody tr:first-child th {
-            color: #000000;
             padding: 7px 0 7px 15px;
+            color: black;
             font-weight: normal;
             text-align: left;
             text-transform: uppercase;
@@ -117,6 +69,45 @@ html {
             html body div#content table tbody tr:first-child th:last-child {
               border-right: none; }
         html body div#content table tbody tr:nth-child(n+1) td {
-          border-bottom: 1px solid #D3D3D3;
           padding: 7px 0 7px 15px;
-          background-color: #ffffff; }
+          background-color: white;
+          border-bottom: 1px solid #D3D3D3; }
+    html body input.cell_width {
+      margin: 5px 0 15px 0;
+      padding: 0 0 0 5px;
+      width: 100%;
+      height: 30px;
+      color: #808080;
+      border: 1px solid #D3D3D3;
+      box-sizing: border-box;
+      box-shadow: none; }
+    html body textarea {
+      margin: 5px 0 20px 0;
+      padding: 0 0 0 5px;
+      width: 100%;
+      height: 200px;
+      color: #808080;
+      border-color: #D3D3D3;
+      box-sizing: border-box;
+      vertical-align: top;
+      resize: vertical; }
+    html body #button {
+      margin: 0 0 15px 0;
+      width: 255px;
+      height: 45px;
+      position: relative;
+      background-color: transparent;
+      font-size: 125%;
+      font-weight: normal;
+      color: #5488B5;
+      cursor: pointer;
+      border: 1px #5488B5 solid;
+      transition: all ease 0.2s; }
+      html body #button:hover {
+        border: 3px #5488B5 solid;
+        font-weight: bold; }
+      html body #button:active {
+        top: 3px;
+        box-shadow: 0 3px 0 transparent; }
+    html body span {
+      color: #808080; }
