--- a/homework_03/scss/_variables1.scss
+++ b/homework_03/scss/_variables1.scss
@@ -1,19 +1,38 @@
+//html
 $htmlbackgroundColor: #DCBB9A;
+
+//body
 $bodybackgroundColor: #ffffff;
-$bodytextcolor: #000000;
+$bodytextcolor: black;
+
+//heading
 $headingcolor: #893C00;
-$imgborder: 2px solid #893C00;
 $h1texttransform: none;
-$tbodybackgroundcolor: #ffffff;
+
+//table
+$tbodybackgroundcolor: white;
 $theadbackgroundcolor: #E0E0E0;
-$theadcolor: #000000;
-$tcaptioncolor: #000000;
+$theadcolor: black;
+$tcaptioncolor: black;
 $tborder: 1px solid #D3D3D3;
+
+//a
 $acolor: #5488B5;
+$acolorhover: gray;
+$acolorvisited: orange;
+
+//form
 $formtextcolor: #808080;
+
+//button
 $buttoncolor: #5488B5;
+
+//.brief
 $briefbackgroundcolor: #FADCBA;
 $brieffloat: left;
 $briefwidth: 40%;
-$imgmargintop: 0;
 $briefmarginbottom: 5px;
+
+//img
+$imgmargintop: 0;
+$imgborder: 2px solid #893C00;
